Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91061

[REG 6.0.1->6.1.0] qml/quick examples not compiling on iOS (Undefined symbols for architecture arm64)

XMLWordPrintable

    • iOS/tvOS/watchOS
    • 92b15beb9aa09467583230a018c23114bb666a8e (qt/qtbase/dev) 2983fe8f0900778a668bc4fdaf00d38ed299b6d8 (qt/qtbase/6.1)

      Qt6.1.0 iOS binaries (117bdd98673a7db6c6e8ff79745447efbff68941) via online installer. Launch Creator and open e.g. qml/shell and compile, fails with:

      Undefined symbols for architecture arm64:
       "qt_static_plugin_QSCNetworkReachabilityNetworkInformationBackend()", referenced from:
       StaticQSCNetworkReachabilityNetworkInformationBackendPluginInstance::StaticQSCNetworkReachabilityNetworkInformationBackendPluginInstance() in shell_plugin_import.o 
      ld: symbol(s) not found for architecture arm64 
      clang: error: linker command failed with exit code 1 (use -v to see invocation)
      ** BUILD FAILED ** 
      The following build commands failed: 
      Ld Debug-iphoneos/shell.app/shell normal arm64 (1 failure) 
      make: *** [xcodebuild-debug-device] Error 65
      

      Full log attached.

      Reproduces with examples in qml and quick, I didn't try all of them, but with few. Examples are compiled with Qt6.0.1.

      gui/analogclock does compile, and deploys to device, also some widget examples.

        1. qml_shell_ios_610.txt
          31 kB
          Johanna Äijälä
        For Gerrit Dashboard: QTBUG-91061
        # Subject Branch Project Status CR V

            qtbuildsystem Qt Build System Team
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes